wizard/messagebox.css
.wizard-messagebox {
  position: fixed;
  top: 1rem;
  right: 1rem;
  width: calc(100% - 6.5rem);
  max-width: 60ex;
  min-height: 3em;
  padding: 0.5em 0.5em 0.5em 4em;
  background-color: rgb(253, 149, 222);
  border-radius: 0.5em;
  font-family: sans-serif;
  font-size: medium;
}

.wizard-messagebox .wizard {
  position: absolute;
  left: 0.25em;
  font-size: 200%;
  background: url("/assets/Cassie\ profile.png") top/contain no-repeat;
  color: transparent;
  width: 1.5em;
  height: 2em;
}

.wizard-messagebox .close {
  padding-left: 0.5em;
  font-family: monospace;
  line-height: 50%;
  cursor: pointer;
  float: right;
}

.wizard-messagebox .text p:first-child {
  margin-top: 0;
}

.wizard-messagebox .text p:last-child {
  margin-bottom: 0;
}

